# neural_network

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
app/unittests/: test_normalize.py
src/: mnist.py  multilayer_perceptron.py  normalize.py  polynomials.py  pyproject.toml  sigmoid.py  sinusoids.py  training.py
src/unittests/: test_multilayer_perceptron.py  test_normalize.py  test_polynomials.py  test_sigmoid.py  test_sinusoids.py  test_training.py
