[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Ike-li <viktorl@163.com>"]
readme = "README.md"
packages = [{include = "neural_network"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"